Default to neovim if it exists

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,10 +6,16 @@
 - clean: ['~']
 
 - link:
-    ~/.vimrc: vim/vimrc
     ~/.zshrc: zsh/zshrc
     ~/.tmux.conf: tmux/tmux.conf
     ~/.vim: vim
+    ~/.vimrc: vim/vimrc
+    ~/.config/nvim:
+      force: true
+      path: vim
+    ~/.config/nvim/init.vim:
+      force: true
+      path: vim/vimrc
 
 - shell:
   - git submodule update --init --recursive
