--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,9 @@
+set -g status-utf8 on
+set -g utf8 on
+
+set -g status-bg colour241
+set -g status-fg white
+
 set -g default-terminal "screen-256color"
 set -sg escape-time 0
 
